--- a/usvisa-rescheduler.service
+++ b/usvisa-rescheduler.service
@@ -8,8 +8,7 @@ User=root
 WorkingDirectory=/root/usvisa-ca
 Environment=PATH=/root/venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 ExecStart=/root/venv/bin/python /root/usvisa-ca/reschedule.py
-Restart=always
-RestartSec=60
+Restart=no
 StandardOutput=append:/root/usvisa-ca/logs/rescheduler.log
 StandardError=append:/root/usvisa-ca/logs/rescheduler.error.log
 
